wasm backend (Track A) + cljs/browser groundwork + compiler bug fixes (#15)
* cljs-sandbox: WebGPU/WebGL/wasm-codegen experiments for browser port

Scratch sandbox (not wired into raster) de-risking the three top unknowns
of the cljs/browser port:

- node/wasm_dotproduct.mjs: emit a dot-product kernel (scalar + SIMD128
  f64x2) via binaryen, optimize/validate/instantiate, check vs JS. Proves
  the wasm CPU-backend premise (binaryen as the classfile analogue, f64 +
  SIMD128 preserved). Local run: SIMD ~1.64x over JS scalar, identical sums.
- src/sandbox/webgpu_compute.cljs: saxpy WGSL f32 compute vs CPU reference
  (the f32-on-GPU par/map! shape).
- src/sandbox/webgl_triangle.cljs: minimal WebGL2 render seam check.

shadow-cljs + deps.edn + package.json; node_modules etc. gitignored.

* cljs-sandbox: puppeteer browser runner; all 3 experiments validated

- node/run_browser.mjs drives headful Chromium on DISPLAY=:0, serves public/,
  captures console + #log + screenshot.
- Validated end-to-end in a real browser on a real GPU adapter:
  WebGPU saxpy f32 PASS (max|gpu-cpu|=0), WebGL2 triangle drawn,
  wasm dot-product SIMD 1.64x (node).
- deps.edn: add thheller/shadow-cljs (needed when shadow defers classpath to
  deps.edn via :deps {:aliases [:cljs]}). package.json: puppeteer-core.
- README: document the runner + the advanced-compilation externs lesson
  (WebGPU interop needs js-interop/externs; dev build doesn't munge).

* cljs-sandbox: Exploration I — cljs↔wasm shared-memory kernel call (Model A)

Static .wasm (binaryen, node/emit_kernels.mjs) fetched + instantiated by
shadow-compiled cljs (src/sandbox/wasm_interop.cljs), shares a Float64Array
view over wasm linear memory, calls saxpy over (ptr,len), reads back
bit-identical results. Browser-validated: scalar + SIMD f64x2 both
max|wasm-cljs|=0. The fress boundary pattern minus fressian (flat f64 hot path).

* cljs-sandbox: Exploration II — raster IR → wasm tracer-bullet (PASS)

Dumps a real deftm's POST-PASS IR (the